--- a/lesson1_2.ipynb
+++ b/lesson1_2.ipynb
@@ -9,12 +9,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "8\n",
+      "7\n"
      ]
     }
    ],
    "source": [
-    "print(8)"
+    "print(8)\n",
+    "x = 3\n",
+    "y = 4\n",
+    "print(x+y)"
    ]
   }
  ],
