--- a/lesson0227_2.ipynb
+++ b/lesson0227_2.ipynb
@@ -51,6 +51,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "12\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum1=0\n",
+    "sum=0\n",
+    "all=0\n",
+    "while True:\n",
+    "    i=int(input())\n",
+    "    sum+=1\n",
+    "    if i<0:\n",
+    "        break\n",
+    "    elif i%2==1:\n",
+    "        \n",
+    "        continue\n",
+    "    all+=i\n",
+    "    sum1+=1\n",
+    "\n",
+    "print(sum)\n",
+    "print(all)\n",
+    "print(sum1)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -280,6 +324,43 @@
     "else :\n",
     "    print(\"重度肥胖\")\n",
     "#print(f\"身高:{high*100:.0f},體重:{weight}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "身高cm體重kg您的BMI是90.000\n",
+      "您的體重:重度肥胖\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyinputplus as pyip\n",
+    "\n",
+    "high=pyip.inputFloat(\"身高cm\")/100\n",
+    "weight=pyip.inputFloat(\"體重kg\")\n",
+    "\n",
+    "bmi=weight/(high**2)\n",
+    "print(f\"您的BMI是{bmi:.3f}\")\n",
+    "print(\"您的體重:\",end='')\n",
+    "if bmi<18.5:\n",
+    "    print(\"體重過輕\")\n",
+    "elif bmi<24:\n",
+    "    print(\"正常範圍\")\n",
+    "elif bmi<27 :\n",
+    "    print(\"過重\")\n",
+    "elif bmi<30 :\n",
+    "    print(\"輕度肥胖\")\n",
+    "elif bmi<35 :\n",
+    "    print(\"中度肥胖\")\n",
+    "else :\n",
+    "    print(\"重度肥胖\")\n"
    ]
   }
  ],
