--- a/0312.ipynb
+++ b/0312.ipynb
@@ -23,10 +23,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=(1,2,3)\n",
+    "print(a)\n",
+    "c,v,f=1,2,3\n",
+    "c,v,f\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "<class 'float'>\n",
+      "555\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=[0,\"S\",6.2]\n",
+    "for i in arr:\n",
+    "    print(type(i))\n",
+    "a=1\n",
+    "if type(a)==int:\n",
+    "    print(555)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14, 24, 84, 82, 53, 20, 61, 7, 1, 38]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a:list[int]=[]\n",
+    "for i in range(0,10):\n",
+    "    a.append(random.randint(0,100))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 5, 9]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr:list[int]=[int(input()) for i in range(0,3)]\n",
+    "\n",
+    "arr"
+   ]
   },
   {
    "cell_type": "code",
