--- a/0314.ipynb
+++ b/0314.ipynb
@@ -118,49 +118,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n"
+      "徐xx  bmi:24.618 過重\n",
+      "王xx  bmi:26.573 過重\n",
+      "張xx  bmi:23.291 正常範圍\n"
      ]
     }
    ],
    "source": [
     "data:list[dict[str:float]]=[\n",
-    "    {\"name\":\"john\",\"heigh\":19,\"weight\":60,\"bmi\":0,\"a\":\"\"},\n",
-    "    {\"name\":\"arm\",\"heigh\":10,\"weight\":65,\"bmi\":0,\"a\":\"\"},\n",
-    "    {\"name\":\"joy\",\"heigh\":18,\"weight\":70,\"bmi\":0,\"a\":\"\"},\n",
+    "    {'name':'徐xx','height':178,'weight':78},\n",
+    "    {'name':'王xx','height':168,'weight':75},\n",
+    "    {'name':'張xx','height':183,'weight':78},\n",
     "]\n",
-    "\n",
-    "def bmi(weight:float,high:float,inda:int):\n",
-    "    bmi=weight/((high/100)**2)\n",
-    "    data[inda][\"bmi\"]=bmi\n",
-    "    if bmi<18.5:\n",
-    "        data[inda][\"a\"]=\"體重過輕\"       \n",
-    "    elif bmi<24:\n",
-    "        data[inda][\"a\"]=\"正常範圍\"\n",
-    "    elif bmi<27 :\n",
-    "        data[inda][\"a\"]=\"體重過輕\"\n",
-    "    elif bmi<30 :\n",
-    "        data[inda][\"a\"]=\"輕度肥胖\"\n",
-    "    elif bmi<35 :\n",
-    "        data[inda][\"a\"]=\"中度肥胖\"\n",
-    "    else :\n",
-    "        data[inda][\"a\"]=\"重度肥胖\"\n",
-    "    return 0\n",
-    "\n",
     "def main():\n",
-    "    for i in range(0,3):\n",
-    "        bmi(data[i][\"heigh\"],)\n",
+    "    for i in data:\n",
+    "        high=i[\"height\"]\n",
+    "        weight=i[\"weight\"]\n",
+    "        bmi=weight/((high/100)**2)\n",
+    "        name=i[\"name\"]\n",
+    "        print(f\"{ name }  bmi:{bmi:.3f} \",end=\"\")\n",
     "\n",
-    "  \n",
-    "main()\n",
+    "        if bmi<18.5:\n",
+    "            print(\"體重過輕\")\n",
+    "        elif bmi<24:\n",
+    "            print(\"正常範圍\")\n",
+    "        elif bmi<27 :\n",
+    "            print(\"過重\")\n",
+    "        elif bmi<30 :\n",
+    "            print(\"輕度肥胖\")\n",
+    "        elif bmi<35 :\n",
+    "            print(\"中度肥胖\")\n",
+    "        else :\n",
+    "            print(\"重度肥胖\")\n",
+    "        \n",
+    "\n",
+    "if __name__==\"__main__\":    \n",
+    "    main()\n",
     "    \n"
    ]
   }
