--- a/0319.ipynb
+++ b/0319.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,23 +92,22 @@
     "print(i.ID)\n",
     "print(i.a)\n",
     "print(i.b)\n",
+    "i.sum()\n",
     "print(i.ave)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 38\u001b[0m\n\u001b[1;32m     36\u001b[0m guy:AllData\u001b[38;5;241m=\u001b[39mAllData\u001b[38;5;241m.\u001b[39mmodel_validate(names)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m guy:\n\u001b[0;32m---> 38\u001b[0m     \u001b[43mi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;66;03m#print(f\"{i.name} {i.bmi} {i.bmi_}\")\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "徐xx 24.62 過重\n",
+      "王xx 26.57 過重\n",
+      "張xx 23.29 正常範圍\n"
      ]
     }
    ],
@@ -125,7 +124,7 @@
     "    weight:int\n",
     "    bmi:float=0\n",
     "    bmi_:str=\"\"\n",
-    "    @property\n",
+    "    \n",
     "    def f(self):\n",
     "        self.bmi=self.weight/(self.height/100)**2\n",
     "        if self.bmi<18.5:\n",
@@ -140,6 +139,7 @@
     "            self.bmi_=\"中度肥胖\"\n",
     "        else :\n",
     "            self.bmi_=\"重度肥胖\"\n",
+    "        \n",
     "\n",
     "class AllData(RootModel):\n",
     "    root:list[data]\n",
@@ -151,7 +151,7 @@
     "guy:AllData=AllData.model_validate(names)\n",
     "for i in guy:\n",
     "    i.f()\n",
-    "    print(f\"{i.name} {i.bmi} {i.bmi_}\")\n"
+    "    print(f\"{i.name} {i.bmi:.2f} {i.bmi_}\")\n"
    ]
   }
  ],
