--- a/0321/02.ipynb
+++ b/0321/02.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['王德城', '林淑安', '李進慧', '林怡偉']\n"
+      "['楊建安', '李政白', '彭虹屏', '王惠皓']\n"
      ]
     }
    ],
@@ -29,18 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "0",
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m stu:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mdict\u001b[39m:\u001b[38;5;28many\u001b[39m]\u001b[38;5;241m=\u001b[39m{}\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m----> 6\u001b[0m     \u001b[43mstu\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39mnames[i]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#    stu[i][\"ch\"]=random.randint(50,60)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(stu)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mMC2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyinputplus\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpyip\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m names:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[43mf\u001b[49m(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m      4\u001b[0m stu:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mdict\u001b[39m:\u001b[38;5;28many\u001b[39m]\u001b[38;5;241m=\u001b[39m{}\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
      ]
     }
    ],
@@ -59,14 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': '林思賢', 'ch': 7}, {'name': '吳麗卿', 'ch': 0}, {'name': '王良斌', 'ch': 0}, {'name': '葉志峰', 'ch': 1}, {'name': '余宗儒', 'ch': 4}]\n"
+      "[{'name': '王德城', 'ch': 4}, {'name': '簡國瑋', 'ch': 7}, {'name': '藍哲嘉', 'ch': 2}, {'name': '溫重意', 'ch': 7}, {'name': '黃麗美', 'ch': 2}]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mMC2\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m names:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[43mf\u001b[49m(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m      5\u001b[0m st:\u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m names:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
      ]
     }
    ],
@@ -86,22 +97,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'height': 163, 'name': '陳俊憲', 'weight': 68},\n",
-       " {'height': 189, 'name': '羅佩樺', 'weight': 89},\n",
-       " {'height': 162, 'name': '朱彥志', 'weight': 40},\n",
-       " {'height': 181, 'name': '陳建豪', 'weight': 46},\n",
-       " {'height': 200, 'name': '余月修', 'weight': 85}]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': '程玫靖', 'ch': 7}, {'name': '陳怡珊', 'ch': 2}, {'name': '王雅琴', 'ch': 7}, {'name': '郭舜昇', 'ch': 2}, {'name': '楊又源', 'ch': 1}]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyinputplus\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpyip\u001b[39;00m\n\u001b[1;32m      6\u001b[0m num:\u001b[38;5;28mint\u001b[39m\u001b[38;5;241m=\u001b[39mpyip\u001b[38;5;241m.\u001b[39minputInt()\n\u001b[0;32m----> 7\u001b[0m names:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[43mf\u001b[49m(num)\n\u001b[1;32m      8\u001b[0m st:\u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m names:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
     }
    ],
    "source": [
@@ -115,8 +130,9 @@
     "st:list=[]\n",
     "for i in names:\n",
     "    stu:dict={}\n",
-    "    stu[\"height\"]=random.randint(150,220)\n",
     "    stu[\"name\"]=i\n",
+    "    stu[\"height\"]=random.randint(150,220)\n",
+    "    \n",
     "    \n",
     "    stu[\"weight\"]=random.randint(40,90)\n",
     "    \n",
