--- a/lesson12/homework.ipynb
+++ b/lesson12/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Asset\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from requests import Response\n",
-    "import p\n",
+    "import csv\n",
+    "from pydantic import root_model,BaseModel\n",
+    "from pprint import pprint\n",
     "def get_request(link:str)->Response|None:\n",
     "    try:\n",
     "        re:Response=requests.get(link)\n",
@@ -30,13 +40,28 @@
     "    except:\n",
     "        print(\"Fail\")\n",
     "        return None\n",
-    "\n"
+    "\n",
+    "req:requests=get_request(url)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
