--- a/lesson14/lesson14_0.ipynb
+++ b/lesson14/lesson14_0.ipynb
@@ -25,7 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyautogui'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyautogui\u001b[39;00m\n\u001b[1;32m      2\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39msize()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyautogui'"
+     ]
+    }
+   ],
+   "source": [
+    "import pyautogui\n",
+    "pyautogui.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
