--- a/lesson15/homework.ipynb
+++ b/lesson15/homework.ipynb
@@ -2,17 +2,524 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Asset\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>where</th>\n",
+       "      <th>nmae</th>\n",
+       "      <th>total</th>\n",
+       "      <th>boIn</th>\n",
+       "      <th>boOut</th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>YouBike2.0_捷運科技大樓站</td>\n",
+       "      <td>大安區</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2024-04-14 10:33:20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YouBike2.0_復興南路二段273號前</td>\n",
+       "      <td>大安區</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2024-04-14 10:33:20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>YouBike2.0_國北教大實小東側門</td>\n",
+       "      <td>大安區</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2024-04-14 10:35:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>YouBike2.0_和平公園東側</td>\n",
+       "      <td>大安區</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2024-04-14 10:27:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>YouBike2.0_辛亥復興路口西北側</td>\n",
+       "      <td>大安區</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2024-04-14 10:29:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1401</th>\n",
+       "      <td>YouBike2.0_臺大總圖書館西南側</td>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>30</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2024-04-14 10:32:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1402</th>\n",
+       "      <td>YouBike2.0_臺大黑森林西側</td>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2024-04-14 10:28:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1403</th>\n",
+       "      <td>YouBike2.0_臺大獸醫館南側</td>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2024-04-14 10:24:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1404</th>\n",
+       "      <td>YouBike2.0_臺大新體育館東南側</td>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>40</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-04-14 10:26:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1405</th>\n",
+       "      <td>YouBike2.0_臺大明達館北側(員工宿舍)</td>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2024-04-14 09:59:19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1406 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         where    nmae  total  boIn  boOut  \\\n",
+       "0           YouBike2.0_捷運科技大樓站     大安區     28     5     23   \n",
+       "1       YouBike2.0_復興南路二段273號前     大安區     21    14      7   \n",
+       "2         YouBike2.0_國北教大實小東側門     大安區     16     1     15   \n",
+       "3            YouBike2.0_和平公園東側     大安區     11     0     11   \n",
+       "4         YouBike2.0_辛亥復興路口西北側     大安區     16     6     10   \n",
+       "...                        ...     ...    ...   ...    ...   \n",
+       "1401      YouBike2.0_臺大總圖書館西南側  臺大公館校區     30    20     10   \n",
+       "1402        YouBike2.0_臺大黑森林西側  臺大公館校區     20     8     12   \n",
+       "1403        YouBike2.0_臺大獸醫館南側  臺大公館校區     24     9     15   \n",
+       "1404      YouBike2.0_臺大新體育館東南側  臺大公館校區     40    33      2   \n",
+       "1405  YouBike2.0_臺大明達館北側(員工宿舍)  臺大公館校區     18     2     16   \n",
+       "\n",
+       "                     data  \n",
+       "0     2024-04-14 10:33:20  \n",
+       "1     2024-04-14 10:33:20  \n",
+       "2     2024-04-14 10:35:19  \n",
+       "3     2024-04-14 10:27:13  \n",
+       "4     2024-04-14 10:29:18  \n",
+       "...                   ...  \n",
+       "1401  2024-04-14 10:32:19  \n",
+       "1402  2024-04-14 10:28:18  \n",
+       "1403  2024-04-14 10:24:18  \n",
+       "1404  2024-04-14 10:26:19  \n",
+       "1405  2024-04-14 09:59:19  \n",
+       "\n",
+       "[1406 rows x 6 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "import "
+    "import requests\n",
+    "from requests import Response\n",
+    "from pydantic import root_model,BaseModel\n",
+    "from pprint import pprint\n",
+    "from pydantic import BaseModel, RootModel, Field,field_validator\n",
+    "from pprint import pprint\n",
+    "import pandas as pd\n",
+    "\n",
+    "url = 'https://tcgbusfs.blob.core.windows.net/dotapp/youbike/v2/youbike_immediate.json'\n",
+    "class Data(BaseModel):\n",
+    "    #擷取資料\n",
+    "    where:str=Field(alias=\"sna\")\n",
+    "    nmae:str=Field(alias=\"sarea\")\n",
+    "    total:int=Field(alias=\"tot\")\n",
+    "    boIn:int=Field(alias=\"sbi\")\n",
+    "    boOut:int=Field(alias=\"bemp\")\n",
+    "    data:str=Field(alias=\"mday\")\n",
+    "    field_validator(\"total\",\"boIn\",\"boOut\",mode='before')\n",
+    "    #避免特定資列為空字串\n",
+    "    @classmethod\n",
+    "    def empty_to_zero(cls,value):\n",
+    "        if value=='':\n",
+    "            return '0'\n",
+    "        else:\n",
+    "            return value  \n",
+    "\n",
+    "\n",
+    "class AllData(RootModel):\n",
+    "    root:list[Data]\n",
+    "    def __iter__(self) :\n",
+    "        return iter(self.root)\n",
+    "    def __getitem__(self,ind):\n",
+    "        return self.root[ind]\n",
+    "    \n",
+    "    \n",
+    "def get_request(link:str)->Response|None:\n",
+    "    try:\n",
+    "        re:Response=requests.get(link)\n",
+    "        re.raise_for_status()\n",
+    "        if re.status_code==200:\n",
+    "            print(\"Asset\")\n",
+    "            return re\n",
+    "        else:\n",
+    "            print(\"Fail\")\n",
+    "    except:\n",
+    "        print(\"Fail\")\n",
+    "        return None\n",
+    "\n",
+    "def main()->int:\n",
+    "    req:requests=get_request(url)\n",
+    "    if req==None:\n",
+    "        return -1\n",
+    "    ind=req.text\n",
+    "    data:Data=AllData.model_validate_json(ind)\n",
+    "    dataDic=data.model_dump()\n",
+    "    display(pd.DataFrame(dataDic))\n",
+    "    \n",
+    "    return 0\n",
+    "print(main())\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "開始下載:\n",
+      "下載成功\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>行政區</th>\n",
+       "      <th>站點名稱</th>\n",
+       "      <th>時間</th>\n",
+       "      <th>總車輛數</th>\n",
+       "      <th>可借</th>\n",
+       "      <th>可還</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>大安區</td>\n",
+       "      <td>YouBike2.0_捷運科技大樓站</td>\n",
+       "      <td>2024-04-14 10:01:22</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>大安區</td>\n",
+       "      <td>YouBike2.0_復興南路二段273號前</td>\n",
+       "      <td>2024-04-14 09:59:20</td>\n",
+       "      <td>21</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>大安區</td>\n",
+       "      <td>YouBike2.0_國北教大實小東側門</td>\n",
+       "      <td>2024-04-14 09:56:20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>大安區</td>\n",
+       "      <td>YouBike2.0_和平公園東側</td>\n",
+       "      <td>2024-04-14 09:56:20</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>大安區</td>\n",
+       "      <td>YouBike2.0_辛亥復興路口西北側</td>\n",
+       "      <td>2024-04-14 09:59:19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1401</th>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>YouBike2.0_臺大總圖書館西南側</td>\n",
+       "      <td>2024-04-14 09:58:19</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1402</th>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>YouBike2.0_臺大黑森林西側</td>\n",
+       "      <td>2024-04-14 09:58:19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1403</th>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>YouBike2.0_臺大獸醫館南側</td>\n",
+       "      <td>2024-04-14 09:54:19</td>\n",
+       "      <td>24</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1404</th>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>YouBike2.0_臺大新體育館東南側</td>\n",
+       "      <td>2024-04-14 09:59:20</td>\n",
+       "      <td>40</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1405</th>\n",
+       "      <td>臺大公館校區</td>\n",
+       "      <td>YouBike2.0_臺大明達館北側(員工宿舍)</td>\n",
+       "      <td>2024-04-14 09:59:19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1406 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         行政區                      站點名稱                   時間  總車輛數  可借  可還\n",
+       "0        大安區        YouBike2.0_捷運科技大樓站  2024-04-14 10:01:22    28   5  23\n",
+       "1        大安區    YouBike2.0_復興南路二段273號前  2024-04-14 09:59:20    21   5  16\n",
+       "2        大安區      YouBike2.0_國北教大實小東側門  2024-04-14 09:56:20    16   1  15\n",
+       "3        大安區         YouBike2.0_和平公園東側  2024-04-14 09:56:20    11   3   8\n",
+       "4        大安區      YouBike2.0_辛亥復興路口西北側  2024-04-14 09:59:19    16   8   8\n",
+       "...      ...                       ...                  ...   ...  ..  ..\n",
+       "1401  臺大公館校區      YouBike2.0_臺大總圖書館西南側  2024-04-14 09:58:19    30   9  19\n",
+       "1402  臺大公館校區        YouBike2.0_臺大黑森林西側  2024-04-14 09:58:19    20   6  14\n",
+       "1403  臺大公館校區        YouBike2.0_臺大獸醫館南側  2024-04-14 09:54:19    24   7  17\n",
+       "1404  臺大公館校區      YouBike2.0_臺大新體育館東南側  2024-04-14 09:59:20    40  30   5\n",
+       "1405  臺大公館校區  YouBike2.0_臺大明達館北側(員工宿舍)  2024-04-14 09:59:19    18   2  16\n",
+       "\n",
+       "[1406 rows x 6 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from requests import Response\n",
+    "import pandas as pd\n",
+    "\n",
+    "from pydantic import BaseModel, RootModel, Field\n",
+    "\n",
+    "class BikeOfSite(BaseModel):\n",
+    "    行政區:str = Field(alias='sarea')\n",
+    "    站點名稱:str = Field(alias='sna')\n",
+    "    時間:str = Field(alias='mday')\n",
+    "    總車輛數:int = Field(alias='tot')\n",
+    "    可借:int = Field(alias='sbi')\n",
+    "    可還:int = Field(alias='bemp')\n",
+    "\n",
+    "############################\n",
+    "\n",
+    "class BikeOfSites(RootModel):\n",
+    "    root:list[BikeOfSite]\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return iter(self.root)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.root[idx]\n",
+    "\n",
+    "############################\n",
+    "\n",
+    "def get_response() -> Response | None:\n",
+    "    url_path:str = 'https://tcgbusfs.blob.core.windows.net/dotapp/youbike/v2/youbike_immediate.json'\n",
+    "\n",
+    "    print(f'開始下載:')\n",
+    "\n",
+    "    try:\n",
+    "        response:Response = requests.get(url_path, timeout=15)\n",
+    "        response.raise_for_status()\n",
+    "    except Exception as e:\n",
+    "        print('連線失敗。')\n",
+    "        print(e)\n",
+    "        return None\n",
+    "    \n",
+    "    if response.status_code != 200:\n",
+    "        print('下載失敗。')\n",
+    "        print(response.reason)\n",
+    "        return None\n",
+    "    \n",
+    "    print('下載成功')\n",
+    "    return response\n",
+    "\n",
+    "############################\n",
+    "\n",
+    "def jsonToList(raw:str) -> list[dict] | None:\n",
+    "    try:\n",
+    "        datas:BikeOfSites = BikeOfSites.model_validate_json(raw)\n",
+    "        items:list[dict] = datas.model_dump()\n",
+    "        return items\n",
+    "    except Exception as e:\n",
+    "        print('預想外的格式。')\n",
+    "        print(e)\n",
+    "        return None\n",
+    "\n",
+    "############################\n",
+    "\n",
+    "def main():\n",
+    "    response:Response | None = get_response()\n",
+    "\n",
+    "    if not response:\n",
+    "        return\n",
+    "    \n",
+    "    rawString:str = response.text\n",
+    "    download_data:list[dict] | None = jsonToList(rawString)\n",
+    "\n",
+    "    if not download_data:\n",
+    "        return\n",
+    "\n",
+    "    df = pd.DataFrame(download_data)\n",
+    "\n",
+    "    display(df)\n",
+    "    \n",
+    "main()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
